# lightweight-screen-capture

./: .gitignore  README.md  ai_capture.py  main.py  pyproject.toml  rect_main.py
.github/workflows/: tests.yml
docs/: AI_DETECTION.md  CONFIGURATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  SQUARE_BOX_DETECTOR.md
examples/: ai_detection_example.py  customizable_detection_example.py  rectangle_detection_example.py  square_detection_example.py
src/lightweight_screen_capture/: __init__.py  ai_detector.py  alert_handler.py  camera_capture.py  capture.py  display.py  functions.py  helper.py  rectangle_detector.py  region_detector.py  region_tracker.py  screen_capture.py  square_box_detector.py
tests/unit_tests/: test_camera_capture.py  test_screen_capture.py
