[project]
name = "lightweight_screen_capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Dennis", email = "wwdennis.home@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pytest>=9.0.2",
    "pywin32>=311; sys_platform == 'win32'", # Only installs on Windows
    "ruff>=0.14.10",
    "ty>=0.0.13",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
